--- a/public/index.html
+++ b/public/index.html
@@ -26,72 +26,254 @@
     </div>
     <h1><strong>Meghna x Kshitij  1.0</strong></h1>
 <div class="details-card">
-  <h1 class="card-title">Today: 👰🏾‍♀️🤵🏾‍♂️ Wedding</h1>
+  <h1 class="card-title">Today: 🎶🎭 Sangeet</h1>
   <div class="card-content">
     <div class="info-section">
       <h4 class="section-header">📍 Time and Place</h4>
       <ul class="info-list">
-        <li><strong>Venue:</strong> Temescal Beach House, at Temescal Regional Recreation Area, 6500 Broadway, Oakland, CA 94618</li>
-        <li><strong>Arrive:</strong> 4:30pm, we will take a short walk at 5pm</li>
-        <li><strong>Google Maps:</strong> <a href="https://maps.app.goo.gl/EYqpNPBQuh2G5VFg8" target="_blank">Venue Location</a></li>
-        <li><strong>Parking:</strong> <a href="https://maps.app.goo.gl/4E5nuzoPmTZMYCou9" target="_blank">Reserved Lot</a> (if full, use <a href="https://maps.app.goo.gl/w9DqjxVKBDdCRqjr6" target="_blank">Public Lot</a>)</li>
+        <li><strong>Venue:</strong> <a href="https://maps.app.goo.gl/xYpbKukNdbr5NUtE6?g_st=ipc">Live Oak Community Center</a>, Berkeley CA </li>
+        <li><strong>Arrive:</strong> 6:00pm-ish. We get the keys at 6 and family will be setting up for the first 15min or so. Pizza arrives at 6:15pm.</li>
+        <li><strong>Parking:</strong> No onsite parking, so you will need to find street parking if you're driving.</li>
       </ul>
     </div>
 <p><div class="info-section">
-<h4 class="section-header">🥻 Clothing</h4>
-<ul class="info-list">
-<li>Wear shoes you can walk and dance in; there will be ~15min of walking on a paved path on the side of the lake, and there will be dancing 💃🏽🕺🏾</li>
-<li>Bring a warm jacket because the temperature will drop in the evening 🥶</li>
-</ul>
+<h4 class="section-header">The Show</h4>
+<a href="https://docs.google.com/spreadsheets/d/1o1eZwUjtRrD-HzKCPXol7t2pimZ18hqhdsw_wgzwOFU/edit?usp=sharing">Sign up!</a> Or just check out what's happening.
 </div></p>
 <p><div class="info-section">
-<h4 class="section-header">🌤️ Weather</h4>
-<ul class="info-list">
-<li>High of 68°F at 4:30pm</li>
-<li>Gets down to 55°F at 10pm 🥶</li>
-<li><strong>Bring WARM clothes!</strong></li>
-</ul>
+<h4 class="section-header">🥻 Clothing</h4>
+Today is all indoors! But probably still bring a warm jacket 🥶
 </div></p>
 <p><div class="info-section">
 <h4 class="section-header">📖 Book Swap</h4>
 <ul class="info-list">
-<li>Inscribe one of the copies of your book with your name and a message for us</li>
-<li>Bring your books to the Book Table on the patio outdoors. Put our copy between the bookends. Put the other copy in the guest pile</li>
-<li>After the ceremony, book swap! Pick a copy of a book from another guest</li>
+<li>Find the person whose book you took home last night, and go talk to them! The table is below.</li>
+<li>If you forgot to take a book, pick one from the pile at the venue.</li>
 </ul>
-</div></p>
-<p><div class="info-section">
-<h4 class="section-header">📸 Guest Book</h4>
-<ul class="info-list">
-<li>Also after the ceremony, instax guestbook! Take a picture using one of the instax cameras, put it in the album and write a lil message for us!</li>
-</ul>
-</div></p>
-<p><div class="info-section">
-<h4 class="section-header">🎬 CrowdCam</h4>
-<ul class="info-list">
-<li>We'll have an old school video camera we're passing around, grab it when you see it and start recording stuff 🎬</li>
-</ul>
-</div></p>
-<p><div class="info-section">
-<h4 class="section-header">⏰ Schedule</h4>
-<ul class="info-list schedule-list">
-<li><strong>5:00pm</strong> Lake walk leaves</li>
-<li><strong>5:45pm</strong> Ceremony</li>
-<li><strong>6:25pm</strong> Appetizers</li>
-<li><strong>7:00pm</strong> Dinner</li>
-<li><strong>7:15pm</strong> Speeches</li>
-<li><strong>8:15pm</strong> Dancing starts</li>
-<li><strong>8:45pm</strong> Cake</li>
-<li><strong>9:45pm</strong> Late night snack</li>
-<li><strong>10:45pm</strong> Last call and final song</li></p>
-<p></ul>
-</div></p>
-<p><div class="info-section">
-<h4 class="section-header">💌 Questions?</h4>
-<p class="contact-note">If you have questions tomorrow, we might be busy. Please text the WhatsApp group and someone will reply 💌</p>
 </div></p>
   </div>
 </div>
+<h2>The LOOT</h2>
+<p>Getting married is SICK. We got so many books. More than a birthday. Even more
+than first day of college! Wow. By reading these books we are going to become so
+good and so wise. Like mega-brains 🧠. Thank you for these books. Except you,
+Aaron. We don't look forward to taking your gift on the flight to New York.</p>
+<table>
+<thead>
+<tr>
+<th>who gave</th>
+<th>book</th>
+<th>author</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>aaron</td>
+<td>the anarchist cookbook</td>
+<td>william powell</td>
+</tr>
+<tr>
+<td>aditi</td>
+<td>toot &amp; puddle</td>
+<td>holly hobbie</td>
+</tr>
+<tr>
+<td>alex</td>
+<td>still life with woodpecker</td>
+<td>tom robbins</td>
+</tr>
+<tr>
+<td>allie</td>
+<td>a manual for cleaning women</td>
+<td>lucia berlin</td>
+</tr>
+<tr>
+<td>andrew</td>
+<td>daytripper</td>
+<td>fábio moon and gabriel bá</td>
+</tr>
+<tr>
+<td>antonia and connor</td>
+<td>the thousand autumns of jacob de zoet</td>
+<td>david mitchell</td>
+</tr>
+<tr>
+<td>anya</td>
+<td>welcome to the hyunam-dong bookshop</td>
+<td>hwang bo-reum</td>
+</tr>
+<tr>
+<td>archana</td>
+<td>the miracle of mindfulness</td>
+<td>thich nhat hanh</td>
+</tr>
+<tr>
+<td>brian</td>
+<td>the anthropocene reviewed</td>
+<td>john green</td>
+</tr>
+<tr>
+<td>chai</td>
+<td>be here now</td>
+<td>ramdas</td>
+</tr>
+<tr>
+<td>chinmaya</td>
+<td>mastery</td>
+<td>robert green</td>
+</tr>
+<tr>
+<td>chris</td>
+<td>the mezzanine</td>
+<td>nicholson baker</td>
+</tr>
+<tr>
+<td>cormac</td>
+<td>the art of gathering</td>
+<td>priya parker</td>
+</tr>
+<tr>
+<td>dylan</td>
+<td>the diamond age</td>
+<td>neal stephenson</td>
+</tr>
+<tr>
+<td>ekin</td>
+<td>giraffes can't dance</td>
+<td>giles andreae and guy parker-rees</td>
+</tr>
+<tr>
+<td>elise</td>
+<td>notes from a small island</td>
+<td>bill bryson</td>
+</tr>
+<tr>
+<td>esin</td>
+<td>what to cook when you don't feel like cooking</td>
+<td>caroline chambers</td>
+</tr>
+<tr>
+<td>esin, efe and ekin</td>
+<td>a philosophy of walking</td>
+<td>frédéric gros</td>
+</tr>
+<tr>
+<td>ilona</td>
+<td>they can't kill us until they kill us</td>
+<td>hanif abdurraqib</td>
+</tr>
+<tr>
+<td>isabel &amp; manny</td>
+<td>we both laughed in pleasure</td>
+<td>lou sullivan, edited by elis martin and zach ozma</td>
+</tr>
+<tr>
+<td>julia</td>
+<td>laziness does not exist</td>
+<td>devon price</td>
+</tr>
+<tr>
+<td>karen &amp; cam</td>
+<td>the essential calvin and hobbes</td>
+<td>bill watterson</td>
+</tr>
+<tr>
+<td>manny &amp; isabel</td>
+<td>prison writings</td>
+<td>leonard peltier</td>
+</tr>
+<tr>
+<td>manu lauria (groom's father)</td>
+<td>jonathan livingston seagull</td>
+<td>richard bach</td>
+</tr>
+<tr>
+<td>meera</td>
+<td>all about love</td>
+<td>bell hooks</td>
+</tr>
+<tr>
+<td>mel</td>
+<td>the giving tree</td>
+<td>shel silverstein</td>
+</tr>
+<tr>
+<td>monica</td>
+<td>are we smart enough to know how smart animals are</td>
+<td>frans de waal</td>
+</tr>
+<tr>
+<td>morgan</td>
+<td>into the wild</td>
+<td>jon krakauer</td>
+</tr>
+<tr>
+<td>naina</td>
+<td>gilead</td>
+<td>marilynne robinson</td>
+</tr>
+<tr>
+<td>nidhi lauria (groom's mother)</td>
+<td>why good things happen to good people</td>
+<td>stephen post and jill neimark</td>
+</tr>
+<tr>
+<td>nolen</td>
+<td>i, claudius</td>
+<td>robert graves</td>
+</tr>
+<tr>
+<td>piyush</td>
+<td>karma</td>
+<td>sadhguru</td>
+</tr>
+<tr>
+<td>rachel</td>
+<td>they can't kill us until they kill us</td>
+<td>hanif abdurraqib</td>
+</tr>
+<tr>
+<td>rajiv dholakia (bride's father)</td>
+<td>it's easier than you think</td>
+<td>sylvia boorstein</td>
+</tr>
+<tr>
+<td>sara</td>
+<td>to be taught, if fortunate</td>
+<td>becky chambers</td>
+</tr>
+<tr>
+<td>sean</td>
+<td>the body keeps the score</td>
+<td>bessel van der kolk</td>
+</tr>
+<tr>
+<td>smita joshi (bride's mother)</td>
+<td>1491</td>
+<td>charles c. mann</td>
+</tr>
+<tr>
+<td>stefan</td>
+<td>musicophilia</td>
+<td>oliver sacks</td>
+</tr>
+<tr>
+<td>tania, andrew and miles</td>
+<td>art book of love (and others in box set)</td>
+<td>shana gozansky</td>
+</tr>
+<tr>
+<td>viktoria</td>
+<td>imaginable</td>
+<td>jane mcgonigal</td>
+</tr>
+<tr>
+<td>zach</td>
+<td>the wide, wide sea</td>
+<td>hampton sides</td>
+</tr>
+</tbody>
+</table>
 <p><span class="heart-hover-image"><img src="./IMG_3.jpeg" alt=""></span></p>
 <h2>RSVP!</h2>
 <p>Please fill out <a href="https://forms.gle/gkEnJbgXrAirQJyK9">this form</a> to tell us
