--- a/public/index.html
+++ b/public/index.html
@@ -258,6 +258,11 @@ Aaron. We don't look forward to taking your gift on the flight to New York.</p>
 <td>oliver sacks</td>
 </tr>
 <tr>
+<td>steve</td>
+<td>the gift</td>
+<td>lewis hyde</td>
+</tr>
+<tr>
 <td>tania, andrew and miles</td>
 <td>art book of love (and others in box set)</td>
 <td>shana gozansky</td>
