--- a/public/README/index.html
+++ b/public/README/index.html
@@ -11,3 +11,4 @@ pipeline: you push to github, and Cloudflare runs the build step (<code>npx @11t
 <p>To build and/or deploy manually, run those commands yourself in the terminal
 (but deployment probably won't work unless you're KL, because you don't have the
 Cloudflare authorization).</p>
+<p>Bye!</p>
