--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <nav id="side-panel-nav"></nav>
     </div>
     <h1><strong>Meghna x Kshitij  1.0</strong></h1>
-<p>Whoa what's happening now???</p>
+<p>WHOAAAA wwww what's happening now???</p>
 <div class="details-card">
   <h1 class="card-title">Today: 🎶🎭 Sangeet</h1>
   <div class="card-content">
