--- a/public/README/index.html
+++ b/public/README/index.html
@@ -1,5 +1,7 @@
 <h1>Where's the website</h1>
 <p><a href="https://meghnaandkshitij.us">Here</a>.</p>
+<h1>Use the <code>justfile</code></h1>
+<p>All the commands below are in the <code>justfile</code>, so use that instead of typing them out.</p>
 <h1>How to make and preview changes</h1>
 <p>Edit <code>index.md</code> or <code>bundle.css</code>. In another terminal windown, run <code>npx @11ty/eleventy --serve</code>, which will watch for changes and run a webserver
 locally that you can use to preview changes.</p>
