Added Event & Dress code, styling updates

--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,65 @@
       </button>
       <nav id="side-panel-nav"></nav>
     </div>
-    <div class="india-content">
-<h1>we having india wedding</h1>
+    <section class="india-content">
+<h1> Meghna <br>
+& Kshitij </h1>
+<div class="info-section">
+      <h2 class="section-header">Event Overview</h2>
+Event placeholder
+    </div>
+<div class="info-section">
+      <h2 class="section-header">Event Details</h2>
+<p><div class="day-container">
+<h3 class="day-header">Day 1</h3></p>
+<p><div class="event-item">
+<h4 class="event-name">Mehendi</h4>
+<p class="event-timing">Timing: Afternoon</p>
+<p class="dress-code-description"> Dress Code: Casual or Semi-Formal</p>
+<p class="event-description">Join us for mehendi (henna), snacks, and singing.<br>Professional mehndi artists will be available throughout the afternoon.</p></p>
+<p></div></p>
+<p><div class="event-item">
+<h4 class="event-name">Sangeet</h4>
+<p class="event-timing">Timing: Evening</p>
+<p class="dress-code-description"> Dress Code: Cocktail &amp; Party Attire</p>
+<p class="event-description">Dinner, cocktails, and dancing underneath the night sky.</p></p>
+<p></div>
+</div></p>
+<p><div class="day-container">
+<h3 class="day-header">Day 2</h3></p>
+<p><div class="event-item">
+<h4 class="event-name">Haldi</h4>
+<p class="event-timing">Timing: Morning</p>
+<p class="dress-code-description"> Dress Code: Casual or Semi-Formal!</p>
+<p class="event-description">A joyous celebration of color.You might get to throw flowers at us</p>
+</div></p>
+<p><div class="event-item">
+<h4 class="event-name">Wedding Ceremony</h4>
+<p class="event-timing">Timing: Late Afternoon</p>
+<p class="dress-code-description"> Dress Code: Formal!</p>
+<p class="event-description">Marriage ceremony with a view of the ocean</p></p>
+<p></div>
+</div></p>
+<div class="info-section">
+      <h2 class="section-header">What to know about dresscode</h2>
+<div class="dress-code-highlights">
+<ol>
+<li>We want you to feel beautiful and comfortable. Period.</li>
+<li>Indian, Indo-Western, and Western clothes are welcome for any and all events.</li>
+<li>There are no restricted colors, but the Haldi is a great time to wear yellow! (If you <em>must</em> have a color palette, we will send it to you)</li>
+</ol>
+<h3 >Where to get Indian Clothes</h3>
+<p> For our Global friends, if you'd like to get Indian clothes, here is a short list of brands & stores. <br> For the more casual events you'd be looking for kurtas, simple sarees, or simple lehengas. For the formal event you'd be looking for more elaborate sarees and lehengas or bandhgala, sherwanis styles.  </p>
+<ul>
+<li><a href="https://www.kalkifashion.com/" target="_blank">Kalki Fashion</a></li>
+<li><a href="https://www.fabindia.com/" target="_blank">Fab India</a></li>
+<li><a href="https://www.azafashions.com/" target="_blank">Aza Fashions</a></li>
+<li><a href="https://www.perniaspopupshop.com/" target="_blank">Pernia's Pop-Up Shop</a></li>
+<li><a href="https://www.manyavar.com/en-us" target="_blank">Manyavar</a></li>
+</ul>
 </div>
-
+    </div>
+</section>
     <script src="/script.js"></script>
   </body>
 </html>
