--- a/public/index.html
+++ b/public/index.html
@@ -36,31 +36,31 @@
 <!-- <div class="info-section"> -->
       <!-- <h2 class="section-header">Event Details</h2> -->
 <p><div class="day-container">
-<h3 class="day-header">Day 1</h3></p>
+<h3 class="day-header">Feb 1</h3></p>
 <p><div class="event-item">
 <h4 class="event-name">Mehendi</h4>
-<p class="event-timing">Timing: Afternoon</p>
+<p class="event-timing">3.30-5.30pm</p>
 <p class="dress-code-description"> Dress Code: Casual or Semi-Formal</p>
 <p class="event-description">Join us for mehendi (henna), snacks, and singing.<br>Professional mehndi artists will be available throughout the afternoon.</p></p>
 <p></div></p>
 <p><div class="event-item">
 <h4 class="event-name">Sangeet</h4>
-<p class="event-timing">Timing: Evening</p>
+<p class="event-timing">7.30pm onwards</p>
 <p class="dress-code-description"> Dress Code: Cocktail &amp; Party Attire</p>
 <p class="event-description">Dinner, cocktails, and dancing underneath the night sky.</p></p>
 <p></div>
 </div></p>
 <p><div class="day-container">
-<h3 class="day-header">Day 2</h3></p>
+<h3 class="day-header">Feb 2</h3></p>
 <p><div class="event-item">
 <h4 class="event-name">Haldi</h4>
-<p class="event-timing">Timing: Morning</p>
+<p class="event-timing">9.30-11am</p>
 <p class="dress-code-description"> Dress Code: Casual or Semi-Formal!</p>
 <p class="event-description">A joyous celebration of color.You might get to throw flowers at us</p>
 </div></p>
 <p><div class="event-item">
 <h4 class="event-name">Wedding Ceremony</h4>
-<p class="event-timing">Timing: Late Afternoon</p>
+<p class="event-timing">4.30pm onwards</p>
 <p class="dress-code-description"> Dress Code: Formal!</p>
 <p class="event-description">Marriage ceremony with a view of the ocean</p></p>
 <p></div>
