--- a/public/index.html
+++ b/public/index.html
@@ -26,17 +26,15 @@
       </button>
       <nav id="side-panel-nav"></nav>
     </div>
-    <section class="india-content">
-<h1> Meghna <br>
-& Kshitij </h1>
-<div class="info-section">
-      <h2 class="section-header">Event Overview</h2>
-Event placeholder
-    </div>
+    <div class="marigolds-banner"></div>
+<div class="page-wrapper">
+<section class="india-content">
+<div class="logo"> <span id="meghna"> Meghna</span> <span id="kshitij">
+<span id="shortened"> & K</span><span>shitij</span></span></div>
 <div class="info-section">
       <h2 class="section-header">Event Details</h2>
 <p><div class="day-container">
-<h3 class="day-header">Day 1</h3></p>
+<h3 class="day-header">  ❖ Day One ❖</h3></p>
 <p><div class="event-item">
 <h4 class="event-name">Mehendi</h4>
 <p class="event-timing">Timing: Afternoon</p>
@@ -51,7 +49,7 @@ Event placeholder
 <p></div>
 </div></p>
 <p><div class="day-container">
-<h3 class="day-header">Day 2</h3></p>
+<h3 class="day-header">❖ Day Two ❖</h3></p>
 <p><div class="event-item">
 <h4 class="event-name">Haldi</h4>
 <p class="event-timing">Timing: Morning</p>
@@ -71,7 +69,7 @@ Event placeholder
 <ol>
 <li>We want you to feel beautiful and comfortable. Period.</li>
 <li>Indian, Indo-Western, and Western clothes are welcome for any and all events.</li>
-<li>There are no restricted colors, but the Haldi is a great time to wear yellow! (If you <em>must</em> have a color palette, we will send it to you)</li>
+<li>There are no restricted colors. (If you <em>must</em> have a color palette, we will send it to you)</li>
 </ol>
 <h3 >Where to get Indian Clothes</h3>
 <p> For our Global friends, if you'd like to get Indian clothes, here is a short list of brands & stores. <br> For the more casual events you'd be looking for kurtas, simple sarees, or simple lehengas. For the formal event you'd be looking for more elaborate sarees and lehengas or bandhgala, sherwanis styles.  </p>
@@ -85,6 +83,7 @@ Event placeholder
 </div>
     </div>
 </section>
+</div>
     <script src="/script.js"></script>
   </body>
 </html>
