resolving merge conflicts

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
-    <title>MEGHNA AND KSHITIJ GETTING MARRIED WAHOOOOO WE DID IT we did it wow</title>
+    <title>MEGHNA AND KSHITIJ GETTING MARRIED WAHOOO WE&#39;RE DOING IT!! wow</title>
   </head>
   <body data-page-style="india">
     <button class="hamburger-menu" aria-label="Open navigation menu" aria-expanded="false" aria-controls="side-panel">
