mobile fonts adjustment

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 <div class="info-section">
       <h2 class="section-header">Event Details</h2>
 <p><div class="day-container">
-<h3 class="day-header">  ❖ Day One ❖</h3></p>
+<h3 class="day-header">  ❖ February 1 ❖</h3></p>
 <p><div class="event-item">
 <h4 class="event-name">Mehendi</h4>
 <p class="event-timing">Timing: Afternoon</p>
@@ -49,7 +49,7 @@
 <p></div>
 </div></p>
 <p><div class="day-container">
-<h3 class="day-header">❖ Day Two ❖</h3></p>
+<h3 class="day-header">❖ February 2 ❖</h3></p>
 <p><div class="event-item">
 <h4 class="event-name">Haldi</h4>
 <p class="event-timing">Timing: Morning</p>
