--- a/public/index.html
+++ b/public/index.html
@@ -36,31 +36,89 @@
 <p><div class="day-container">
 <h3 class="day-header">  ❖ February 1 ❖</h3></p>
 <p><div class="event-item">
+<h4 class="event-name">Lunch</h4>
+<p class="event-timing">Timing: 12.30-3.30pm</p>
+<p class="event-timing">Location: Cafe Cascada</p>
+</div></p>
+<p><div class="event-item">
 <h4 class="event-name">Mehendi</h4>
-<p class="event-timing">Timing: Afternoon</p>
+<p class="event-timing">Timing: 2.30-5pm</p>
+<p class="event-timing">Location: Varca Ballroom</p>
 <p class="dress-code-description"> Dress Code: Casual or Semi-Formal</p>
-<p class="event-description">Join us for mehendi (henna), snacks, and singing.<br>Professional mehndi artists will be available throughout the afternoon.</p></p>
+<p class="event-description">Join us for mehendi (henna), snacks, and singing.<br>Professional mehndi artists will be available throughout the afternoon.</p>
+Family members from both sides will tell family stories.</p>
 <p></div></p>
 <p><div class="event-item">
-<h4 class="event-name">Sangeet</h4>
-<p class="event-timing">Timing: Evening</p>
+<h4 class="event-name">Sangeet and Dinner</h4>
+<p class="event-timing">Timing: 7-10pm</p>
+<p class="event-timing">Location: New Lawns</p>
 <p class="dress-code-description"> Dress Code: Cocktail &amp; Party Attire</p>
-<p class="event-description">Dinner, cocktails, and dancing underneath the night sky.</p></p>
+<p class="event-description">
+Performances, dinner, cocktails, and dancing underneath the night sky.</p>
+<p>7.30pm Performances</p>
+<p>8.15pm DJ
+<br />
+<b>Last dance at 10pm.</b></p>
+<p></p></p>
+<p></div></p>
+<p><div class="event-item">
+<h4 class="event-name">Afters</h4>
+<p class="event-timing">Timing: 10pm-bed</p>
+<p class="event-timing">Location: Varca Ballroom</p>
+<p class="dress-code-description"> Dress Code: Whatever you were wearing for Sangeet</p>
+<p class="event-description">After-party bar in the Varca Ballroom. Come hang out when you wanna come inside.</p></p>
 <p></div>
 </div></p>
 <p><div class="day-container">
 <h3 class="day-header">❖ February 2 ❖</h3></p>
 <p><div class="event-item">
-<h4 class="event-name">Haldi</h4>
-<p class="event-timing">Timing: Morning</p>
-<p class="dress-code-description"> Dress Code: Casual or Semi-Formal!</p>
-<p class="event-description">A joyous celebration of color.You might get to throw flowers at us</p>
+<h4 class="event-name">Breakfast</h4>
+<p class="event-timing">Timing: 7.30-9.30am</p>
+<p class="event-timing">Location: Cafe Cascada</p>
 </div></p>
 <p><div class="event-item">
-<h4 class="event-name">Wedding Ceremony</h4>
-<p class="event-timing">Timing: Late Afternoon</p>
+<h4 class="event-name">Haldi</h4>
+<p class="event-timing">Timing: 9.30-11am</p>
+<p class="dress-code-description"> Dress Code: Casual or Semi-Formal!</p>
+<p class="event-description">A joyous celebration of color. You might get to throw flowers at us.</p>
+<p>Family members from both sides will tell family stories.
+</p>
+</div></p>
+<p><div class="event-item">
+<h4 class="event-name">Lunch</h4>
+<p class="event-timing">Timing: 12.30-3.30pm</p>
+<p class="event-timing">Location: Cafe Cascada</p>
+</div></p>
+<p><div class="event-item">
+<h4 class="event-name">Start of Wedding Ceremony: Sehrabandi and High Tea</h4>
+<p class="event-timing">Timing: 3.30-4.30pm</p>
+<p class="event-timing">Location: Varca Ballroom</p>
+<p class="dress-code-description"> Dress Code: Formal!</p>
+<p class="event-description">Family fusses over Kshitij.
+<br/>
+Everything from here on after is one continuous mega-event that includes the wedding ceremony and ends with dinner. Then there's an after-party. So show up to this in whatever outfit you want to be wearing for the rest of the evening.
+</p></p>
+<p></div></p>
+<p><div class="event-item">
+<h4 class="event-name">Baraat departs</h4>
+<p class="event-timing">Timing: 4.30pm</p>
+<p class="event-timing">Location: Porch</p>
+<p class="dress-code-description"> Dress Code: Formal!</p>
+<p class="event-description">Dancing procession to the wedding ceremony.</p></p>
+<p></div></p>
+<p><div class="event-item">
+<h4 class="event-name">Wedding Ceremony and Dinner</h4>
+<p class="event-timing">Timing: 5.30-10pm</p>
+<p class="event-timing">Location: Beach Lawns</p>
 <p class="dress-code-description"> Dress Code: Formal!</p>
 <p class="event-description">Marriage ceremony with a view of the ocean</p></p>
+<p></div></p>
+<p><div class="event-item">
+<h4 class="event-name">Afters</h4>
+<p class="event-timing">Timing: 10pm-bed</p>
+<p class="event-timing">Location: Varca Ballroom</p>
+<p class="dress-code-description"> Dress Code: Whatever you were wearing for the wedding</p>
+<p class="event-description">After-party bar in the Varca Ballroom. Come hang out when you wanna come inside.</p></p>
 <p></div>
 </div></p>
 <div class="info-section">
@@ -80,17 +138,6 @@
   <li><a href="https://www.perniaspopupshop.com/" target="_blank">Pernia's Pop-Up Shop</a></li>
   <li><a href="https://www.manyavar.com/en-us" target="_blank">Manyavar</a></li>
 </ul>
-</div>
-</div>
-<div class="info-section">
-      <h2 class="section-header">Other links and resources</h2>
-<div class="dress-code-highlights">
-<h3 >Where to get vaccines for India in NYC</h3>
-<p>
-One of our friends had a very good experience with the <a href="https://www.travelhealth.net/">New York Center for Travel and Tropical Medicine</a> and would happily recommend them. Our friend said: 
-<p>&quot;the place does a little consult, talks about travel, then offers vax recommendations.</p>
-<p>two reasons it is good are: all prices are posted in full on their website (not true for places like Passport Health!) + they didn't push things that I didn't think I need + they suggested my partner just go to a pharmacy to get her TDAP vax instead of paying for it there lol&quot;</p>
-</p>
 </div>
 </div>
 </section>
